--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -52,13 +52,6 @@
 				animation: fadeIn 1s 0.6s ease-out backwards;
 			}
 		}
-		.opening-paragraph {
-			@extend %light-wallpaper;
-			@extend %left-card;
-			grid-area: 2 / 1 / 3 / 2;
-			margin: 20px 0;
-			animation: fadeInFromLeft 1s 0.6s backwards;
-		}
 		.phone-numbers,
 		.address {
 			@extend %centered-column-flexbox;
@@ -76,6 +69,7 @@
 			}
 		}
 		.phone-numbers {
+			grid-column: 1 / span 2;
 			@extend %dark-wallpaper;
 			margin: 20px 0;
 			animation: fadeIn 1s 0.3s ease-out backwards;
@@ -173,6 +167,7 @@
 			}
 			.phone-numbers {
 				p {
+					width: 50%;
 					.phone-numbers-header {
 						font-size: 2.5rem;
 					}
@@ -248,7 +243,7 @@
 	@media screen and (max-width: 700px) {
 		.contact-info {
 			grid-template-columns: 100%;
-			grid-template-rows: minmax(30vh, auto) repeat(5, minmax(30vh, auto));
+			grid-template-rows: minmax(30vh, auto) repeat(4, minmax(30vh, auto));
 			.banner {
 				h1 {
 					font-size: 3.5rem;
@@ -259,20 +254,26 @@
 					text-align: center;
 				}
 			}
-			.opening-paragraph {
-				grid-area: 2 / 1 / 3 / 2;
-			}
 			.phone-numbers {
-				grid-area: 3 / 1 / 4 / 2;
+				grid-area: 2 / 1 / 3 / 2;
+				.email {
+					word-break: break-word !important;
+					padding-left: 0;
+				}
 			}
 			iframe {
-				grid-area: 4 / 1 / 5 / 2;
+				grid-area: 3 / 1 / 4 / 2;
 			}
 			table {
-				grid-area: 5 / 1 / 6 / 2;
+				grid-area: 4 / 1 / 5 / 2;
+				width: 85%;
 			}
 			.address {
-				grid-area: 6 / 1 / 7 / 2;
+				grid-area: 5 / 1 / 6 / 2;
+				width: 100%;
+				p {
+					width: 80%;
+				}
 			}
 		}
 	}
@@ -285,10 +286,6 @@
 				h2 {
 					font-size: 4rem;
 				}
-			}
-			.opening-paragraph {
-				width: 750px;
-				font-size: 1.75rem;
 			}
 			.phone-numbers {
 				p {
@@ -335,10 +332,6 @@
 				h2 {
 					font-size: 5rem;
 				}
-			}
-			.opening-paragraph {
-				width: 1000px;
-				font-size: 2.5rem;
 			}
 			.phone-numbers {
 				p {
