--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -32,66 +32,36 @@
 			}
 		}
 	}
-	.description {
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		place-items: center;
+	.call-to-action {
 		min-height: 40vh;
+		@extend %light-wallpaper;
+		display: grid;
+		place-items: center;
 		width: 100%;
-		.text-container {
-			display: grid;
-			place-items: center;
-			margin: 10%;
-			background-color: $green1;
+		height: 100%;
+		animation: fadeIn 1s 0.5s ease-out backwards;
+		a {
+			color: black;
+			font-weight: 300;
+			font-size: 4rem;
+			text-shadow: 2px 2px 3px $green4;
+			text-decoration: none;
+			font-family: $title-font;
+			padding: 40px 60px;
 			border-radius: 10px;
-			animation: fadeInFromLeft 1s 1.5s backwards;
-			p {
-				@extend %left-card;
-				@extend %light-wallpaper;
-				flex-grow: 1;
-				font-family: $text-font;
-				font-size: 1.25rem;
-				padding: 3vh;
-			}
+			box-shadow: 7px 10px 10px $gold4;
+			background: radial-gradient($gold2, $gold3);
+			animation: fadeInFromRight 1s 1.5s backwards;
+			transition: 0.3s;
 		}
-		.call-to-action {
-			@extend %dark-wallpaper;
-			display: grid;
-			place-items: center;
-			width: 100%;
-			height: 100%;
-			animation: fadeIn 1s 0.5s ease-out backwards;
-			a {
-				color: black;
-				font-weight: 300;
-				padding-bottom: 20px;
-				font-size: 4rem;
-				text-shadow: 2px 2px 3px $green4;
-				text-decoration: none;
-				font-family: $title-font;
-				padding: 20px;
-				border-radius: 10px;
-				box-shadow: 7px 10px 10px $gold4;
-				background: radial-gradient($gold2, $gold3);
-				animation: fadeInFromRight 1s 1.5s backwards;
-				transition: 0.3s;
-			}
-			a:hover {
-				transform: scale(1.05);
-			}
+		a:hover {
+			transform: scale(1.05);
 		}
 	}
 	@media screen and (max-width: 1350px) {
-		.description {
-			.text-container {
-				p {
-					font-size: 1.15rem;
-				}
-			}
-			.call-to-action {
-				a {
-					font-size: 3rem;
-				}
+		.call-to-action {
+			a {
+				font-size: 3rem;
 			}
 		}
 	}
@@ -108,17 +78,10 @@
 				}
 			}
 		}
-		.description {
+		.call-to-action {
 			min-height: 50vh;
-			.text-container {
-				p {
-					font-size: 1rem;
-				}
-			}
-			.call-to-action {
-				a {
-					font-size: 2.5rem;
-				}
+			a {
+				font-size: 2.5rem;
 			}
 		}
 	}
@@ -138,43 +101,25 @@
 				}
 			}
 		}
-		.description {
-			grid-template-columns: 1fr;
-			grid-template-rows: 20vh;
-
-			.call-to-action {
-				grid-row: 1 / span 2;
-				a {
-					font-size: 2rem;
-				}
+		.call-to-action {
+			grid-row: 1 / span 2;
+			a {
+				font-size: 2rem;
+				padding: 20px 30px;
 			}
 		}
 	}
 	@media screen and (min-width: 2500px) {
-		.description {
-			.text-container {
-				p {
-					font-size: 1.75rem;
-				}
-			}
-			.call-to-action {
-				a {
-					font-size: 6rem;
-				}
+		.call-to-action {
+			a {
+				font-size: 6rem;
 			}
 		}
 	}
 	@media screen and (min-width: 3700px) {
-		.description {
-			.text-container {
-				p {
-					font-size: 2.5rem;
-				}
-			}
-			.call-to-action {
-				a {
-					font-size: 8rem;
-				}
+		.call-to-action {
+			a {
+				font-size: 8rem;
 			}
 		}
 	}
