--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -71,7 +71,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 50vh;
+    min-height: 50vh;
     animation: fadeIn 1s ease-out backwards; }
     .landing-container .title-banner .titles {
       padding: 30px 0;
@@ -118,7 +118,7 @@
       font-size: 3rem; } }
   @media screen and (max-width: 1000px) {
     .landing-container .title-banner {
-      height: 40vh; }
+      min-height: 40vh; }
       .landing-container .title-banner .titles h1,
       .landing-container .title-banner .titles h2 {
         font-weight: 400; }
@@ -138,7 +138,7 @@
       .landing-container .title-banner .titles h2 {
         font-size: 1.25rem;
         text-align: center;
-        padding: 0 20px; }
+        padding: 0 20px 10px; }
     .landing-container .call-to-action {
       grid-row: 1 / span 2; }
       .landing-container .call-to-action a {
