--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -93,7 +93,7 @@ nav {
       nav ul li a {
         font-family: "Montserrat", sans-serif;
         font-weight: 400;
-        font-size: 2rem;
+        font-size: 1.5rem;
         color: black;
         text-decoration-color: rgba(0, 0, 0, 0); }
     nav ul .visible {
@@ -123,7 +123,9 @@ nav {
     transition: all 0.3s; }
   @media screen and (max-width: 1350px) {
     nav ul li a {
-      font-size: 1.5rem; } }
+      font-size: 1.25rem; }
+    nav ul li a:hover {
+      transform: none; } }
   @media screen and (max-width: 1050px) {
     nav {
       position: absolute;
@@ -167,7 +169,7 @@ nav {
         width: 30%;
         opacity: 0.85; }
         nav ul li a {
-          font-size: 2rem; } }
+          font-size: 1.5rem; } }
   @media screen and (max-width: 700px) {
     nav ul {
       width: 50%; }
@@ -175,7 +177,7 @@ nav {
         font-size: 1.5rem; } }
   @media screen and (min-width: 2500px) {
     nav ul li a {
-      font-size: 3rem; } }
+      font-size: 2.25rem; } }
   @media screen and (min-width: 3700px) {
     nav ul li a {
-      font-size: 4.5rem; } }
+      font-size: 3rem; } }
