--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -52,7 +52,7 @@ nav {
 			a {
 				font-family: $title-font;
 				font-weight: 400;
-				font-size: 2rem;
+				font-size: 1.5rem;
 				color: black;
 				text-decoration-color: rgba(0, 0, 0, 0);
 			}
@@ -89,7 +89,10 @@ nav {
 		ul {
 			li {
 				a {
-					font-size: 1.5rem;
+					font-size: 1.25rem;
+				}
+				a:hover {
+					transform: none;
 				}
 			}
 		}
@@ -147,7 +150,7 @@ nav {
 			opacity: 0.85;
 			li {
 				a {
-					font-size: 2rem;
+					font-size: 1.5rem;
 				}
 			}
 		}
@@ -166,7 +169,7 @@ nav {
 		ul {
 			li {
 				a {
-					font-size: 3rem;
+					font-size: 2.25rem;
 				}
 			}
 		}
@@ -175,7 +178,7 @@ nav {
 		ul {
 			li {
 				a {
-					font-size: 4.5rem;
+					font-size: 3rem;
 				}
 			}
 		}
